fixed release tile view in index and made it visible for not logged in users

--- a/release-calendar-frontend/src/styles/globals.css
+++ b/release-calendar-frontend/src/styles/globals.css
@@ -127,3 +127,12 @@ button:hover {
 form > div {
   margin-bottom: 1rem;
 }
+
+.hide-scrollbar {
+  overflow-x: auto;               /* still scrollable */
+  -ms-overflow-style: none;       /* IE11+ */
+  scrollbar-width: none;          /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;                  /* Chrome, Safari, Opera */
+}
